--- a/main.html
+++ b/main.html
@@ -4,10 +4,31 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<title>HTML TABLE 1</title>
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
+	<table>
+		<caption>Student Details</caption>
+		<thead>
+			<th>NAME</th>
+			<th>AGE</th>
+			<th>BRANCH</th>
+		</thead>
+		<tbody>
+			<tr>
+				<td>Shaw</td>
+				<td>20</td>
+				<td>CSE</td>
+			</tr>
+			<tr>
+				<td>Adil</td>
+				<td>21</td>
+				<td>ECE</td>
+			</tr>
+		</tbody>
+	</table>
     <script type="text/javascript" src="./script.js">
 </script>
 
